# example-swap-layer

./: .gitignore  .gitmodules  Makefile  foundry.toml  package-lock.json  package.json  todo.txt
solana/: .gitignore  Anchor.toml  Cargo.toml  Makefile  a.json  b.json  clippy.toml  package-lock.json  package.json  tsconfig.anchor-test.json  tsconfig.json
solana/modules/swap-layer-messages/: Cargo.toml
solana/modules/swap-layer-messages/src/: lib.rs
solana/modules/swap-layer-messages/src/messages/: mod.rs
solana/modules/swap-layer-messages/src/types/: mod.rs  output.rs  uint.rs
solana/modules/swap-layer-messages/src/types/swap_type/: evm.rs  mod.rs
solana/programs/swap-layer/: Cargo.toml
solana/programs/swap-layer/src/: error.rs  lib.rs  message.rs  state.rs
solana/programs/swap-layer/src/composite/: mod.rs
solana/programs/swap-layer/src/messages/: mod.rs
solana/programs/swap-layer/src/processor/: close_staged_outbound.rs  consume_staged_transfer.rs  initialize.rs  mod.rs  redeem.rs  release_inbound.rs  stage_outbound.rs
solana/programs/swap-layer/src/processor/admin/: initialize.rs  mod.rs
solana/programs/swap-layer/src/processor/complete/: mod.rs
solana/programs/swap-layer/src/processor/initiate/: mod.rs  transfer.rs  usdc.rs
solana/programs/swap-layer/src/processor/swap/: complete.rs
solana/programs/swap-layer/src/state/: custodian.rs  mod.rs  peer.rs  staged_transfer.rs
solana/programs/swap-layer/src/state/staged/: inbound.rs  mod.rs  outbound.rs
solana/programs/swap-layer/src/types/: mod.rs  output.rs  uint.rs
solana/programs/swap-layer/src/types/swap_type/: evm.rs  mod.rs  solana.rs
solana/programs/swap-layer/src/utils/: gas_dropoff.rs  jupiter.rs  mod.rs  relay_parameters.rs  relayer_fees.rs
solana/programs/swap-layer/src/utils/jupiter_v6/: mod.rs
solana/programs/swap-layer/src/utils/token_router/: mod.rs
solana/ts/scripts/: collectedToAnchorToml.ts  getCctpAccounts.ts  testJupV6QuoteFlip.ts  testJupV6QuoteFlipMulti.ts  testJupV6QuoteFlipPhoenix.ts  testJupV6QuoteFlipWhirlpool.ts  testJupV6Serde.ts  testJupiterQuote.ts
solana/ts/src/common/: index.ts  layouts.ts
solana/ts/src/common/messages/: deposit.ts
solana/ts/src/jupiter/: index.ts  layouts.ts
solana/ts/src/jupiterV6/: index.ts  layouts.ts
solana/ts/src/swapLayer/: consts.ts  index.ts  relayerFees.ts  utils.ts
solana/ts/src/swapLayer/messages/: layouts.ts
solana/ts/src/swapLayer/state/: Custodian.ts  Peer.ts  StagedInbound.ts  StagedOutbound.ts  StagedTransfer.ts  index.ts
solana/ts/src/types/: whirlpool.ts
solana/ts/tests/: 00__messages.ts  01__swapLayer.ts  01__transfer.ts  10__jupiterTest.ts  10__swap.ts
solana/ts/tests/accounts/: bern_mint_2022.json  payer_bern_token_2022.json  payer_usdc_token.json  payer_usdt_token.json  payer_wsol_token.json  usdc_mint.json  usdt_mint.json
solana/ts/tests/accounts/cctp/: remote_token_messenger_1.json  remote_token_messenger_2.json  remote_token_messenger_6.json  remote_token_messenger_7.json  usdc_token_pair_1.json  usdc_token_pair_2.json  usdc_token_pair_3.json  usdc_token_pair_6.json  usdc_token_pair_7.json
solana/ts/tests/accounts/jupiter/: jupiter_custody_owner.json  jupiter_lut1.json  jupiter_usdc_custody_token.json  jupiter_usdt_custody_token.json  jupiter_v6_lut_2.json
solana/ts/tests/accounts/jupiter_v6/: jupiter_custody_owner.json  jupiter_v6_lut_3.json  jupiter_v6_lut_4.json  jupiter_v6_lut_5.json  jupiter_v6_lut_6.json  jupiter_v6_lut_7.json  jupiter_v6_lut_8.json
solana/ts/tests/accounts/jupiter_v6/multi/: 25s6jZQYe8RB8JpoCDq3i4u6cCNfCG1xicYK7E7f3v6L.json  2LizoD7noGRmTFszBRj3P2GzfARqdGwhpimQthWTGbhn.json  2UDdWW9TNeEJa2S539ijVLLeVZt88zuiduSYD7SeSeHN.json  2W7aa5mVuzJiaM43uFtutVFdSoWx963AKT8dtizqejTF.json  2qr4UqV7vdJ1TLLX2YGZ7fBJ9U96UwAFAjwLK572TJ4h.json  39PUs23GXEdyRJ74fnSfL7L4tZgXVafirBMsbHqZyCVx.json  3GbtMs4cRP3Th3GhKcZk7sUkF3skxV8FdbiG8aKp7qeh.json  3MsJXVvievxAbsMsaT6TS4i6oMitD9jazucuq3X234tC.json  3nLYkE5zHKgGBxXW8Rj4neWZT5JHgdAjVRqUDcDk8nF9.json  42xVpYuCFbr4FWYoMwzUjDgoUGC4dzjaLhjR71CrAQpe.json  4h5Ye952uZqWBng69NpL1Ghxi9GaRa3t6vJpB7BZFLZZ.json  5Y117zFfFjBUoxATVGBaULdbwQgmx5CZ9WvX9jC6YZxq.json  6LXutJvKUw8Q5ue2gCgKHQdAN4suWW8awzFVC6XCguFx.json  6P4tvbzRY6Bh3MiWDHuLqyHywovsRwRpfskPvyeSoHsz.json  6mK4Pxs6GhwnessH7CvPivqDYauiHZmAdbEFDpXFk9zt.json  85VBFQZC9TZkfaptBWjvUw7YbZjy52A6mjtPGjstQAmQ.json  8M5rjeDQKW4w4rmWFQLTqCYVuA1rMe9Z2QQ2SZResD9M.json  8sLbNZoA1cfnvMJLPfp98ZLAnFSYCFApfJKMbiXNLwxj.json  9iFER3bpjf1PTTCQCfTRu17EJgvsxo9pVyA9QWwEuX4x.json  (+28 more)
solana/ts/tests/accounts/matching_engine/: ethereum_token_router_endpoint.json  local_custody_token_ethereum.json  local_token_router_endpoint.json  matching_engine_custodian.json  matching_engine_mint_recipient.json
solana/ts/tests/accounts/phoenix_v1/: phoenix_jupiter_trader_quote_token.json  phoenix_usdc_custody.json  phoenix_wsol_custody.json  phoenix_wsol_usdc_market_state.json
solana/ts/tests/accounts/token_router/: token_router_custodian.json  token_router_mint_recipient.json
solana/ts/tests/accounts/whirlpool/: whirlpool_usdc_usdt_pool.json  whirlpool_usdc_usdt_tick_array_0.json  whirlpool_usdc_usdt_tick_array_1.json  whirlpool_usdc_usdt_tick_array_1a.json  whirlpool_usdc_usdt_tick_array_1b.json  whirlpool_usdc_usdt_tick_array_2.json  whirlpool_usdc_usdt_tick_array_2a.json  whirlpool_usdc_usdt_tick_array__0.json  whirlpool_usdc_usdt_tick_array__1.json  whirlpool_usdc_usdt_tick_array__2.json  whirlpool_usdc_usdt_tick_array__3.json  whirlpool_usdc_usdt_tick_array__4.json  whirlpool_usdc_vault.json  whirlpool_usdt_vault.json
solana/ts/tests/helpers/: consts.ts  mock.ts  utils.ts
solana/ts/tests/jupiterV6SwapResponses/: multi_2022_to_usdc.json  multi_usdc_to_2022.json  phoenix_v1_usdc_to_wsol.json  phoenix_v1_wsol_to_usdc.json  whirlpool_usdc_to_usdt.json  whirlpool_usdt_to_usdc.json
universal/rs/: Cargo.toml
universal/rs/messages/: Cargo.toml
universal/rs/messages/src/: lib.rs
universal/rs/messages/src/messages/: mod.rs
universal/rs/messages/src/types/: mod.rs  output.rs  output_token.rs  redeem_mode.rs  uint.rs
(+245 files in other folders)
