[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
authors = ["Wormhole Contributors"]

[workspace.dependencies]
anchor-lang = "0.29.0"
solana-program = "1.17.20"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
correctness = { level = "warn"}

arithmetic_side_effects = "deny"
as_conversions = "deny"
cast_abs_to_unsigned = "deny"
cast_lossless= "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
eq_op = "deny"
expect_used = "deny"
float_cmp = "deny"
integer_division = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
lossy_float_literal = "deny"
manual_slice_size_calculation = "deny"
modulo_one = "deny"
out_of_bounds_indexing = "deny"
overflow_check_conditional = "deny"
panic = "deny"
recursive_format_impl = "deny"
todo = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"