[workspace]
members = [
    "programs/swap-layer"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
authors = ["Wormhole Contributors"]
license = "Apache-2.0"
homepage = "https://https://github.com/xlabs"
repository = "https://github.com/xlabs/swap-layer"

[workspace.dependencies.common]
package = "liquidity-layer-common-solana"
path = "../lib/example-liquidity-layer/solana/modules/common"

[workspace.dependencies.token-router]
path = "../lib/example-liquidity-layer/solana/programs/token-router"
features = ["cpi"]

[workspace.dependencies.matching-engine]
path = "../lib/example-liquidity-layer/solana/programs/matching-engine"
features = ["no-entrypoint"]

[workspace.dependencies.swap-layer-messages]
path = "../universal/rs/messages"

[workspace.dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
solana-program = "=1.18.15"
hex = "0.4.3"
ruint = "1.9.0"
cfg-if = "1.0"
hex-literal = "0.4.1"

wormhole-raw-vaas = "0.3.0-alpha.0"
wormhole-solana-consts = "0.3.0-alpha.0"
wormhole-solana-utils = "0.3.0-alpha.0"
wormhole-cctp-solana = "0.3.0-alpha.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
correctness = { level = "warn", priority = -1 }

### See clippy.toml.
unnecessary_lazy_evaluations = "allow"

arithmetic_side_effects = "deny"
as_conversions = "deny"
cast_abs_to_unsigned = "deny"
cast_lossless= "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
eq_op = "deny"
expect_used = "deny"
float_cmp = "deny"
integer_division = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
lossy_float_literal = "deny"
manual_slice_size_calculation = "deny"
modulo_one = "deny"
out_of_bounds_indexing = "deny"
overflow_check_conditional = "deny"
panic = "deny"
recursive_format_impl = "deny"
todo = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
