[package]
name = "swap-layer"
description = "Created with Anchor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_layer"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
localnet = ["token-router/testnet"]
testnet = ["token-router/testnet"]
integration-test = ["localnet"]

[dependencies]
token-router.workspace = true
common.workspace = true

anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true

ruint.workspace = true

[dev-dependencies]
hex-literal.workspace = true