[package]
name = "swap-layer"
description = "Created with Anchor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_layer"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
localnet = ["token-router/localnet"]
testnet = ["token-router/testnet"]
integration-test = ["localnet"]
idl-build = [
    "localnet",
    "token-router/idl-build",
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
swap-layer-messages.workspace = true

token-router.workspace = true
common.workspace = true

wormhole-solana-utils.workspace = true

anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true

hex.workspace = true
ruint.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true
