[package]
name = "swap-layer-messages"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
liquidity-layer-messages.workspace = true
ruint.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true
